--- a/libro1.html
+++ b/libro1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta property="og:title" content="Oraciones" />
 <meta property="og:description" content="Con las oraciones nos comunicamos con Dios" />
-<meta property="og:image" content="https://dnielibarra.github.io/catequesis-oraciones/guadalupe200.png" />
+<meta property="og:image" content="https://dnielibarra.github.io/catequesis-oraciones/guadalupe200.jpg" />
 <meta property="og:url" content="https://dnielibarra.github.io/catequesis-oraciones/" />
 <meta property="og:type" content="website" />
   <title>Oraciones del Catecismo</title>
