--- a/libro1/index.html
+++ b/libro1/index.html
@@ -14,7 +14,6 @@
     <a href="#libro4">Libro 4</a>
     <a href="#libro5">Libro 5</a>
     <a href="#libro6">Libro 6</a>
-    <a href="#libro7">Libro 7</a>
     <a href="#libro8">Libro 8</a>
     <a href="#libro9">Libro 9</a>
     <a href="#libro10">Libro 10</a>
@@ -113,54 +112,25 @@
     </ul>
   </section>
 
-  <!-- Repetimos el contenido del libro 7 al 9 -->
-  <section id="libro7">
-    <h2>Libro 7</h2>
-    <ul>
-      <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
-      <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
-      <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
-      <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
-      <li><div class="oracion-btn" data-key="gloria">✨ Gloria al Padre</div></li>
-      <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
-      <li><div class="oracion-btn" data-key="confieso">🕊️ Yo confieso</div></li>
-      <li><div class="oracion-btn" data-key="contriccion">🛐 Acto de contricción (corto)</div></li>
-      <li><div class="oracion-btn" data-key="alma">💖 Alma de Cristo</div></li>
-      <li><div class="oracion-btn" data-key="comunion">🍞 Comunión Espiritual</div></li>
-      <li><div class="oracion-btn" data-key="salve">👑 Salve Regina</div></li>
-      <li><div class="oracion-btn" data-key="amparo">🕯️ Bajo tu Amparo</div></li>
-      <li><div class="oracion-btn" data-key="mandamientos">📖 Los 10 Mandamientos</div></li>
-      <li><div class="oracion-btn" data-key="mandamientos-iglesia">⛪ Los 5 Mandamientos de la Santa Madre Iglesia</div></li>
-      <li><div class="oracion-btn" data-key="sacramentos">✝️ Los 7 Sacramentos</div></li>
-      <li><div class="oracion-btn" data-key="misericordia-corp">🤲 Las 7 Obras de Misericordia Corporales</div></li>
-      <li><div class="oracion-btn" data-key="misericordia-esp">🕊️ Las 7 Obras de Misericordia Espirituales</div></li>
-      <li><div class="oracion-btn" data-key="pecados">🔥 Los 7 Pecados Capitales</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-teologales">🌟 Las 3 Virtudes Teologales</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-cardinales">🧭 Las 4 Virtudes Cardinales</div></li>
-      <li><div class="oracion-btn" data-key="dones">💨 Los 7 Dones del Espíritu Santo</div></li>
-      <li><div class="oracion-btn" data-key="frutos">🍇 Los 12 Frutos del Espíritu Santo</div></li>
-      <li><div class="oracion-btn" data-key="confesion">✝️ Los 5 Pasos para una Buena Confesión</div></li>
-    </ul>
-  </section>
-
-  <!-- Libros 8 y 9 son iguales -->
   <section id="libro8">
     <h2>Libro 8</h2>
     <ul>
-      <!-- Repetir mismo contenido que libro 7 -->
+      <!-- Mismo contenido que Libro 6 -->
     </ul>
   </section>
 
   <section id="libro9">
     <h2>Libro 9</h2>
     <ul>
-      <!-- Repetir mismo contenido que libro 7 -->
+      <!-- Mismo contenido que Libro 6 -->
     </ul>
   </section>
 
   <section id="libro10">
     <h2>Libro 10</h2>
-    <p>Próximamente...</p>
+    <ul>
+      <!-- Mismo contenido que Libro 6 -->
+    </ul>
   </section>
 
   <div id="modal" class="modal">
