--- a/libro1/index.html
+++ b/libro1/index.html
@@ -19,7 +19,7 @@
     <a href="#libro10">Libro 10</a>
   </nav>
 
-  <section id="libro1">
+  <section id="libro1" class="libro-section">
     <h2>Libro 1: Oraciones Básicas</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -28,7 +28,7 @@
     </ul>
   </section>
 
-  <section id="libro2">
+  <section id="libro2" class="libro-section">
     <h2>Libro 2</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -38,7 +38,7 @@
     </ul>
   </section>
 
-  <section id="libro3">
+  <section id="libro3" class="libro-section">
     <h2>Libro 3</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -49,7 +49,7 @@
     </ul>
   </section>
 
-  <section id="libro4">
+  <section id="libro4" class="libro-section">
     <h2>Libro 4</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -66,7 +66,7 @@
     </ul>
   </section>
 
-  <section id="libro5">
+  <section id="libro5" class="libro-section">
     <h2>Libro 5</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -87,7 +87,7 @@
     </ul>
   </section>
 
-  <section id="libro6">
+  <section id="libro6" class="libro-section">
     <h2>Libro 6</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -112,21 +112,21 @@
     </ul>
   </section>
 
-  <section id="libro8">
+  <section id="libro8" class="libro-section">
     <h2>Libro 8</h2>
     <ul>
       <!-- Mismo contenido que Libro 6 -->
     </ul>
   </section>
 
-  <section id="libro9">
+  <section id="libro9" class="libro-section">
     <h2>Libro 9</h2>
     <ul>
       <!-- Mismo contenido que Libro 6 -->
     </ul>
   </section>
 
-  <section id="libro10">
+  <section id="libro10" class="libro-section">
     <h2>Libro 10</h2>
     <ul>
       <!-- Mismo contenido que Libro 6 -->
