--- a/libro1/index.html
+++ b/libro1/index.html
@@ -106,8 +106,8 @@
       <li><div class="oracion-btn" data-key="mandamientos-iglesia">⛪ Los 5 Mandamientos de la Santa Madre Iglesia</div></li>
       <li><div class="oracion-btn" data-key="sacramentos">✝️ Los 7 Sacramentos</div></li>
       <li><div class="oracion-btn" data-key="pecados">🔥 Los 7 Pecados Capitales</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-teologales">🌟 Las 3 Virtudes Teologales</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-cardinales">🧭 Las 4 Virtudes Cardinales</div></li>
+      <li><div class="oracion-btn" data-key="virtudesTeologales">🌟 Las 3 Virtudes Teologales</div></li>
+      <li><div class="oracion-btn" data-key="virtudesCardinales">🧭 Las 4 Virtudes Cardinales</div></li>
       <li><div class="oracion-btn" data-key="confesion">✝️ Los 5 Pasos para una Buena Confesión</div></li>
     </ul>
   </section>
