--- a/libro1/index.html
+++ b/libro1/index.html
@@ -3,144 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oraciones del Catecismo</title>
+  <title>Catequesis - Libro 1</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <nav class="menu">
-    <a href="#libro1">Libro 1</a>
-    <a href="#libro2">Libro 2</a>
-    <a href="#libro3">Libro 3</a>
-    <a href="#libro4">Libro 4</a>
-    <a href="#libro5">Libro 5</a>
-    <a href="#libro6">Libro 6</a>
-    <a href="#libro8">Libro 8</a>
-    <a href="#libro9">Libro 9</a>
-    <a href="#libro10">Libro 10</a>
+  <header>
+    <h1>Oraciones del Libro 1</h1>
+  </header>
+
+  <nav>
+    <button onclick="mostrarLibro('libro1')">Libro 1</button>
+    <button onclick="mostrarLibro('libro2')">Libro 2</button>
+    <button onclick="mostrarLibro('libro3')">Libro 3</button>
+    <button onclick="mostrarLibro('libro4')">Libro 4</button>
+    <button onclick="mostrarLibro('libro5')">Libro 5</button>
+    <button onclick="mostrarLibro('libro6')">Libro 6</button>
+    <button onclick="mostrarLibro('libro8')">Libro 8</button>
+    <button onclick="mostrarLibro('libro9')">Libro 9</button>
+    <button onclick="mostrarLibro('libro10')">Libro 10</button>
   </nav>
 
-  <section id="libro1" class="libro-section">
-    <h2>Libro 1: Oraciones Básicas</h2>
-    <ul>
-      <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
-      <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
-      <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
-    </ul>
-  </section>
+  <main>
+    <section id="libro1" class="active">
+      <button class="oracion-btn" data-key="cruz">Señal de la cruz</button>
+      <button class="oracion-btn" data-key="padrenuestro">Padre Nuestro</button>
+      <button class="oracion-btn" data-key="angel">Ángel de la guarda</button>
+    </section>
 
-  <section id="libro2" class="libro-section">
-    <h2>Libro 2</h2>
-    <ul>
-      <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
-      <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
-      <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
-      <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
-    </ul>
-  </section>
+    <!-- Secciones ocultas por ahora -->
+    <section id="libro2">
+      <button class="oracion-btn" data-key="cruz">Señal de la cruz</button>
+      <button class="oracion-btn" data-key="padrenuestro">Padre Nuestro</button>
+      <button class="oracion-btn" data-key="avemaria">Ave María</button>
+      <button class="oracion-btn" data-key="angel">Ángel de la guarda</button>
+    </section>
 
-  <section id="libro3" class="libro-section">
-    <h2>Libro 3</h2>
-    <ul>
-      <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
-      <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
-      <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
-      <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
-      <li><div class="oracion-btn" data-key="gloria">✨ Gloria al Padre</div></li>
-    </ul>
-  </section>
+    <section id="libro3">
+      <button class="oracion-btn" data-key="cruz">Señal de la cruz</button>
+      <button class="oracion-btn" data-key="padrenuestro">Padre Nuestro</button>
+      <button class="oracion-btn" data-key="avemaria">Ave María</button>
+      <button class="oracion-btn" data-key="angel">Ángel de la guarda</button>
+      <button class="oracion-btn" data-key="gloria">Gloria al Padre</button>
+    </section>
 
-  <section id="libro4" class="libro-section">
-    <h2>Libro 4</h2>
-    <ul>
-      <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
-      <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
-      <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
-      <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
-      <li><div class="oracion-btn" data-key="gloria">✨ Gloria al Padre</div></li>
-      <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
-      <li><div class="oracion-btn" data-key="confieso">🕊️ Yo confieso</div></li>
-      <li><div class="oracion-btn" data-key="consagracion">💐 Consagración a la Virgen</div></li>
-      <li><div class="oracion-btn" data-key="mandamientos">📖 Los 10 Mandamientos</div></li>
-      <li><div class="oracion-btn" data-key="sacramentos">✝️ Los 7 Sacramentos</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-teologales">🌟 Las 3 Virtudes Teologales</div></li>
-    </ul>
-  </section>
+    <!-- Puedes copiar y adaptar secciones similares para los demás libros -->
+  </main>
 
-  <section id="libro5" class="libro-section">
-    <h2>Libro 5</h2>
-    <ul>
-      <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
-      <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
-      <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
-      <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
-      <li><div class="oracion-btn" data-key="gloria">✨ Gloria al Padre</div></li>
-      <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
-      <li><div class="oracion-btn" data-key="confieso">🕊️ Yo confieso</div></li>
-      <li><div class="oracion-btn" data-key="contriccion">🛐 Acto de contricción (corto)</div></li>
-      <li><div class="oracion-btn" data-key="salve">👑 Salve Regina</div></li>
-      <li><div class="oracion-btn" data-key="amparo">🕯️ Bajo tu Amparo</div></li>
-      <li><div class="oracion-btn" data-key="mandamientos">📖 Los 10 Mandamientos</div></li>
-      <li><div class="oracion-btn" data-key="mandamientos-iglesia">⛪ Los 5 Mandamientos de la Santa Madre Iglesia</div></li>
-      <li><div class="oracion-btn" data-key="sacramentos">✝️ Los 7 Sacramentos</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-teologales">🌟 Las 3 Virtudes Teologales</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-cardinales">🧭 Las 4 Virtudes Cardinales</div></li>
-    </ul>
-  </section>
-
-  <section id="libro6" class="libro-section">
-    <h2>Libro 6</h2>
-    <ul>
-      <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
-      <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
-      <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
-      <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
-      <li><div class="oracion-btn" data-key="gloria">✨ Gloria al Padre</div></li>
-      <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
-      <li><div class="oracion-btn" data-key="confieso">🕊️ Yo confieso</div></li>
-      <li><div class="oracion-btn" data-key="contriccion">🛐 Acto de contricción (corto)</div></li>
-      <li><div class="oracion-btn" data-key="alma">💖 Alma de Cristo</div></li>
-      <li><div class="oracion-btn" data-key="comunion">🍞 Comunión Espiritual</div></li>
-      <li><div class="oracion-btn" data-key="salve">👑 Salve Regina</div></li>
-      <li><div class="oracion-btn" data-key="amparo">🕯️ Bajo tu Amparo</div></li>
-      <li><div class="oracion-btn" data-key="mandamientos">📖 Los 10 Mandamientos</div></li>
-      <li><div class="oracion-btn" data-key="mandamientos-iglesia">⛪ Los 5 Mandamientos de la Santa Madre Iglesia</div></li>
-      <li><div class="oracion-btn" data-key="sacramentos">✝️ Los 7 Sacramentos</div></li>
-      <li><div class="oracion-btn" data-key="pecados">🔥 Los 7 Pecados Capitales</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-teologales">🌟 Las 3 Virtudes Teologales</div></li>
-      <li><div class="oracion-btn" data-key="virtudes-cardinales">🧭 Las 4 Virtudes Cardinales</div></li>
-      <li><div class="oracion-btn" data-key="confesion">✝️ Los 5 Pasos para una Buena Confesión</div></li>
-    </ul>
-  </section>
-
-  <section id="libro8" class="libro-section">
-    <h2>Libro 8</h2>
-    <ul>
-      <!-- Mismo contenido que Libro 6 -->
-    </ul>
-  </section>
-
-  <section id="libro9" class="libro-section">
-    <h2>Libro 9</h2>
-    <ul>
-      <!-- Mismo contenido que Libro 6 -->
-    </ul>
-  </section>
-
-  <section id="libro10" class="libro-section">
-    <h2>Libro 10</h2>
-    <ul>
-      <!-- Mismo contenido que Libro 6 -->
-    </ul>
-  </section>
-
-  <div id="modal" class="modal">
+  <div id="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h3 id="modal-titulo"></h3>
-      <div class="oracion-texto" id="modal-texto"></div>
+      <h2 id="modal-titulo"></h2>
+      <p id="modal-texto"></p>
     </div>
   </div>
 
   <script src="script.js"></script>
+  <script>
+    function mostrarLibro(id) {
+      document.querySelectorAll("main section").forEach((sec) => sec.classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+    }
+  </script>
 </body>
 </html>
