--- a/libro1/index.html
+++ b/libro1/index.html
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="https://dnielibarra.github.io/catequesis-oraciones/libro1/script.js"></script>
   <script>
     function mostrarLibro(id) {
       document.querySelectorAll("main section").forEach((sec) => sec.classList.remove("active"));
