--- a/libro1/index.html
+++ b/libro1/index.html
@@ -24,7 +24,7 @@
   </nav>
 
   <main>
-    <section id="libro1" class="active">
+    <section id="libro1">
       <button class="oracion-btn" data-key="cruz">Señal de la cruz</button>
       <button class="oracion-btn" data-key="padrenuestro">Padre Nuestro</button>
       <button class="oracion-btn" data-key="angel">Ángel de la guarda</button>
