--- a/porlibros.html
+++ b/porlibros.html
@@ -4,153 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta property="og:title" content="Oraciones" />
-<meta property="og:description" content="Con las oraciones nos comunicamos con Dios" />
-<meta property="og:image" content="https://dnielibarra.github.io/catequesis-oraciones/guadalupe200.jpg" />
-<meta property="og:url" content="https://dnielibarra.github.io/catequesis-oraciones/" />
-<meta property="og:type" content="website" />
+  <meta property="og:description" content="Con las oraciones nos comunicamos con Dios" />
+  <meta property="og:image" content="https://dnielibarra.github.io/catequesis-oraciones/guadalupe200.jpg" />
+  <meta property="og:url" content="https://dnielibarra.github.io/catequesis-oraciones/" />
+  <meta property="og:type" content="website" />
   <title>Oraciones del Catecismo</title>
-  <style>
-body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #fdfdfd;
-  overflow-x: hidden; /* 👈 evita que se agrande la página al hacer swipe */
-}
-
-    nav.menu {
-      background-color: #d0e9e4;
-      padding: 10px 0;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-
-    nav.menu a {
-      display: inline-block;
-      margin: 6px 10px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #00695c;
-      padding: 6px 12px;
-      border-radius: 8px;
-      background-color: #ffffff;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-      transition: background-color 0.2s;
-    }
-
-    nav.menu a:hover {
-      background-color: #b2dfdb;
-    }
-
-    section {
-      padding: 20px;
-    }
-
-    h2 {
-      color: #004d40;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    li .oracion-btn {
-      background-color: #ffffff;
-      border: 1px solid #ccc;
-      padding: 10px;
-      width: 100%;
-      text-align: left;
-      font-size: 16px;
-      margin-bottom: 12px;
-      cursor: pointer;
-      border-radius: 8px;
-      opacity: 0;
-      transform: translateY(10px);
-      animation: aparecer 0.4s ease forwards;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease, opacity 0.3s ease;
-      touch-action: pan-y;
-    }
-
-    li .oracion-btn:nth-child(1) { animation-delay: 0.1s; }
-    li .oracion-btn:nth-child(2) { animation-delay: 0.2s; }
-    li .oracion-btn:nth-child(3) { animation-delay: 0.3s; }
-
-.oculto {
-  opacity: 0 !important;
-  transform: scale(0.9) !important;
-  transition: opacity 0.3s, transform 0.3s;
-  height: 0;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  border: none;
-}
-
-    @keyframes aparecer {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 2000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.6);
-    }
-
-    .modal-content {
-      background-color: #fff;
-      margin: 10% auto;
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 500px;
-      position: relative;
-      animation: zoomIn 0.3s ease;
-    }
-
-    @keyframes zoomIn {
-      0% {
-        transform: scale(0.8);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .close {
-      position: absolute;
-      right: 15px;
-      top: 10px;
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .oracion-texto {
-      white-space: pre-wrap;
-      text-align: justify;
-      margin-top: 10px;
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-  </style>
+  <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
 
@@ -197,75 +56,6 @@ body {
     </div>
   </div>
 
-  <script>
-    const oraciones = {
-      cruz: {
-        titulo: "Señal de la Cruz",
-        texto: "Por la señal de la Santa Cruz,\nde nuestros enemigos líbranos Señor Dios nuestro.\nEn el nombre del Padre, del Hijo y del Espíritu Santo. Amén."
-      },
-      padrenuestro: {
-        titulo: "Padre Nuestro",
-        texto: "Padre nuestro que estás en el cielo,\nsantificado sea tu Nombre;\nvenga a nosotros tu reino;\nhágase tu voluntad en la tierra como en el cielo.\nDanos hoy nuestro pan de cada día;\nperdona nuestras ofensas,\ncomo también nosotros perdonamos a los que nos ofenden;\nno nos dejes caer en la tentación\ny líbranos del mal. Amén."
-      },
-      angel: {
-        titulo: "Ángel de la Guarda",
-        texto: "Ángel de mi guarda,\ndulce compañía,\nno me desampares\nni de noche ni de día.\nNo me dejes solo,\nque me perdería.\nHasta que descanse\nen los brazos de Jesús, José y María. Amén."
-      }
-    };
-
-    function abrirModal(clave) {
-      const modal = document.getElementById("modal");
-      const data = oraciones[clave];
-      document.getElementById("modal-titulo").textContent = data.titulo;
-      document.getElementById("modal-texto").textContent = data.texto;
-      modal.style.display = "block";
-    }
-
-    function cerrarModal() {
-      document.getElementById("modal").style.display = "none";
-    }
-
-    // Swipe para ocultar
-    let startX = 0;
-    let isSwiping = false;
-    let currentItem = null;
-
-    function startSwipe(e) {
-      isSwiping = true;
-      currentItem = e.target.closest('.oracion-btn');
-      startX = e.touches ? e.touches[0].clientX : e.clientX;
-    }
-
-    function moveSwipe(e) {
-      if (!isSwiping || !currentItem) return;
-      let currentX = e.touches ? e.touches[0].clientX : e.clientX;
-      let diffX = currentX - startX;
-      currentItem.style.transform = `translateX(${diffX}px)`;
-    }
-
-    function endSwipe(e) {
-      if (!isSwiping || !currentItem) return;
-      let endX = e.changedTouches ? e.changedTouches[0].clientX : e.clientX;
-      let diffX = endX - startX;
-
-      if (Math.abs(diffX) > 100) {
-        currentItem.classList.add('oculto');
-      } else {
-        currentItem.style.transform = 'translateX(0)';
-        // Abrir modal si fue solo toque/clic
-        if (Math.abs(diffX) < 10) {
-          abrirModal(currentItem.getAttribute('data-key'));
-        }
-      }
-
-      isSwiping = false;
-      currentItem = null;
-    }
-
-    window.onclick = function (event) {
-      const modal = document.getElementById("modal");
-      if (event.target === modal) cerrarModal();
-    };
-  </script>
+  <script src="oraciones.js"></script>
 </body>
 </html>
