--- a/oraciones.html
+++ b/oraciones.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oraciones del Catecismo</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://dnielibarra.github.io/catequesis-oraciones/libro1/style.css" />
 </head>
 <body>
   <nav class="menu">
