--- a/porlibros.html
+++ b/porlibros.html
@@ -47,6 +47,130 @@
     </ul>
   </section>
 
+  <!-- LIBRO 2 -->
+<section id="libro2">
+  <h2>Libro 2</h2>
+  <ul>
+    <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
+    <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
+    <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
+    <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
+  </ul>
+</section>
+
+<!-- LIBRO 3 -->
+<section id="libro3">
+  <h2>Libro 3</h2>
+  <ul>
+    <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
+    <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
+    <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
+    <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
+    <li><div class="oracion-btn" data-key="gloria">🙌 Gloria al Padre</div></li>
+  </ul>
+</section>
+
+<!-- LIBRO 4 -->
+<section id="libro4">
+  <h2>Libro 4</h2>
+  <ul>
+    <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
+    <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
+    <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
+    <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
+    <li><div class="oracion-btn" data-key="gloria">🙌 Gloria al Padre</div></li>
+    <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
+    <li><div class="oracion-btn" data-key="confieso">🛐 Yo Confieso</div></li>
+    <li><div class="oracion-btn" data-key="consagracion">💙 Consagración a la Virgen</div></li>
+    <li><div class="oracion-btn" data-key="10mandamientos">🔟 10 Mandamientos</div></li>
+    <li><div class="oracion-btn" data-key="7sacramentos">7️⃣ 7 Sacramentos</div></li>
+    <li><div class="oracion-btn" data-key="3teologales">✝️ 3 Virtudes Teologales</div></li>
+  </ul>
+</section>
+
+<!-- LIBRO 5 -->
+<section id="libro5">
+  <h2>Libro 5</h2>
+  <ul>
+    <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
+    <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
+    <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
+    <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
+    <li><div class="oracion-btn" data-key="gloria">🙌 Gloria al Padre</div></li>
+    <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
+    <li><div class="oracion-btn" data-key="confieso">🛐 Yo Confieso</div></li>
+    <li><div class="oracion-btn" data-key="actocorto">💔 Acto de Contrición (corto)</div></li>
+    <li><div class="oracion-btn" data-key="salve">🌟 Salve Regina</div></li>
+    <li><div class="oracion-btn" data-key="amparo">🕊️ Bajo tu Amparo</div></li>
+    <li><div class="oracion-btn" data-key="10mandamientos">🔟 10 Mandamientos</div></li>
+    <li><div class="oracion-btn" data-key="5mandamientos">🕍 5 Mandamientos de la Iglesia</div></li>
+    <li><div class="oracion-btn" data-key="7sacramentos">7️⃣ 7 Sacramentos</div></li>
+    <li><div class="oracion-btn" data-key="3teologales">✝️ 3 Virtudes Teologales</div></li>
+    <li><div class="oracion-btn" data-key="4cardinales">⚖️ 4 Virtudes Cardinales</div></li>
+  </ul>
+</section>
+
+<!-- LIBRO 6 -->
+<section id="libro6">
+  <h2>Libro 6</h2>
+  <ul>
+    <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
+    <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
+    <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
+    <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
+    <li><div class="oracion-btn" data-key="gloria">🙌 Gloria al Padre</div></li>
+    <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
+    <li><div class="oracion-btn" data-key="confieso">🛐 Yo Confieso</div></li>
+    <li><div class="oracion-btn" data-key="actocorto">💔 Acto de Contrición (corto)</div></li>
+    <li><div class="oracion-btn" data-key="alma">🩷 Alma de Cristo</div></li>
+    <li><div class="oracion-btn" data-key="comunion">🍞 Comunión Espiritual</div></li>
+    <li><div class="oracion-btn" data-key="salve">🌟 Salve Regina</div></li>
+    <li><div class="oracion-btn" data-key="amparo">🕊️ Bajo tu Amparo</div></li>
+    <li><div class="oracion-btn" data-key="10mandamientos">🔟 10 Mandamientos</div></li>
+    <li><div class="oracion-btn" data-key="5mandamientos">🕍 5 Mandamientos de la Iglesia</div></li>
+    <li><div class="oracion-btn" data-key="7sacramentos">7️⃣ 7 Sacramentos</div></li>
+    <li><div class="oracion-btn" data-key="7pecados">😈 7 Pecados Capitales</div></li>
+    <li><div class="oracion-btn" data-key="3teologales">✝️ 3 Virtudes Teologales</div></li>
+    <li><div class="oracion-btn" data-key="4cardinales">⚖️ 4 Virtudes Cardinales</div></li>
+    <li><div class="oracion-btn" data-key="5confesion">🧼 5 Pasos para Confesión</div></li>
+  </ul>
+</section>
+
+<!-- LIBRO 8, 9 y 10 -->
+<section id="libro8">
+  <h2>Libro 8</h2>
+  <ul>
+    <!-- igual que libro 6 más dones y frutos -->
+    <!-- mismo contenido que también se repetirá en libro 9 y 10 -->
+    <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
+    <li><div class="oracion-btn" data-key="padrenuestro">🙏 Padre Nuestro</div></li>
+    <li><div class="oracion-btn" data-key="avemaria">🌹 Ave María</div></li>
+    <li><div class="oracion-btn" data-key="angel">😇 Ángel de la Guarda</div></li>
+    <li><div class="oracion-btn" data-key="gloria">🙌 Gloria al Padre</div></li>
+    <li><div class="oracion-btn" data-key="credo">📜 Credo Niceno-Constantinopolitano</div></li>
+    <li><div class="oracion-btn" data-key="confieso">🛐 Yo Confieso</div></li>
+    <li><div class="oracion-btn" data-key="actocorto">💔 Acto de Contrición (corto)</div></li>
+    <li><div class="oracion-btn" data-key="alma">🩷 Alma de Cristo</div></li>
+    <li><div class="oracion-btn" data-key="comunion">🍞 Comunión Espiritual</div></li>
+    <li><div class="oracion-btn" data-key="salve">🌟 Salve Regina</div></li>
+    <li><div class="oracion-btn" data-key="amparo">🕊️ Bajo tu Amparo</div></li>
+    <li><div class="oracion-btn" data-key="10mandamientos">🔟 10 Mandamientos</div></li>
+    <li><div class="oracion-btn" data-key="5mandamientos">🕍 5 Mandamientos de la Iglesia</div></li>
+    <li><div class="oracion-btn" data-key="7sacramentos">7️⃣ 7 Sacramentos</div></li>
+    <li><div class="oracion-btn" data-key="7corporales">❤️ 7 Obras de Misericordia Corporales</div></li>
+    <li><div class="oracion-btn" data-key="7espirituales">🕊️ 7 Obras de Misericordia Espirituales</div></li>
+    <li><div class="oracion-btn" data-key="7pecados">😈 7 Pecados Capitales</div></li>
+    <li><div class="oracion-btn" data-key="3teologales">✝️ 3 Virtudes Teologales</div></li>
+    <li><div class="oracion-btn" data-key="4cardinales">⚖️ 4 Virtudes Cardinales</div></li>
+    <li><div class="oracion-btn" data-key="7dones">🕯️ 7 Dones del Espíritu Santo</div></li>
+    <li><div class="oracion-btn" data-key="12frutos">🍇 12 Frutos del Espíritu Santo</div></li>
+    <li><div class="oracion-btn" data-key="5confesion">🧼 5 Pasos para Confesión</div></li>
+  </ul>
+</section>
+
+<!-- Puedes duplicar esta sección para libro9 y libro10 -->
+
+
   <!-- MODAL -->
   <div id="modal" class="modal">
     <div class="modal-content">
