--- a/porlibros.html
+++ b/porlibros.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://dnielibarra.github.io/catequesis-oraciones/guadalupe200.jpg" />
   <meta property="og:url" content="https://dnielibarra.github.io/catequesis-oraciones/" />
   <meta property="og:type" content="website" />
-  <title>Oraciones del Catecismo Version 1.5</title>
+  <title>Oraciones del Catecismo V2</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
