--- a/porlibros.html
+++ b/porlibros.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://dnielibarra.github.io/catequesis-oraciones/guadalupe200.jpg" />
   <meta property="og:url" content="https://dnielibarra.github.io/catequesis-oraciones/" />
   <meta property="og:type" content="website" />
-  <title>Oraciones del Catecismo V2</title>
+  <title>Oraciones del Catecismo V3</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
@@ -25,7 +25,7 @@
   <a href="#libro10">Libro 10</a>
 </nav>
 
-  <section id="libro1">
+  <section id="libro1" class="libro activo">
     <h2>Libro 1: Oraciones Básicas</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz"
@@ -47,7 +47,7 @@
   </section>
 
   <!-- LIBRO 2 -->
-<section id="libro2">
+<section id="libro2" class="libro">
   <h2>Libro 2</h2>
   <ul>
     <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -58,7 +58,7 @@
 </section>
 
 <!-- LIBRO 3 -->
-<section id="libro3">
+<section id="libro3" class="libro">
   <h2>Libro 3</h2>
   <ul>
     <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -70,7 +70,7 @@
 </section>
 
 <!-- LIBRO 4 -->
-<section id="libro4">
+<section id="libro4" class="libro">
   <h2>Libro 4</h2>
   <ul>
     <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -88,7 +88,7 @@
 </section>
 
 <!-- LIBRO 5 -->
-<section id="libro5">
+<section id="libro5" class="libro">
   <h2>Libro 5</h2>
   <ul>
     <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -110,7 +110,7 @@
 </section>
 
 <!-- LIBRO 6 -->
-<section id="libro6">
+<section id="libro6" class="libro">
   <h2>Libro 6</h2>
   <ul>
     <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
@@ -136,7 +136,7 @@
 </section>
 
 <!-- LIBRO 8, 9 y 10 -->
-<section id="libro8">
+<section id="libro8" class="libro">
   <h2>Libro 8</h2>
   <ul>
     <!-- igual que libro 6 más dones y frutos -->
