--- a/porlibros.html
+++ b/porlibros.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://dnielibarra.github.io/catequesis-oraciones/guadalupe200.jpg" />
   <meta property="og:url" content="https://dnielibarra.github.io/catequesis-oraciones/" />
   <meta property="og:type" content="website" />
-  <title>Oraciones del Catecismo V4</title>
+  <title>Oraciones del Catecismo</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
@@ -26,7 +26,7 @@
 </nav>
 
   <section id="libro1" class="libro activo">
-    <h2>Libro 1: Oraciones Básicas</h2>
+    <h2>Libro 1: Oraciones Básicas V4</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz"
         ontouchstart="startSwipe(event)" ontouchmove="moveSwipe(event)" ontouchend="endSwipe(event)"
