--- a/libro1/index.html
+++ b/libro1/index.html
@@ -31,14 +31,14 @@
     </section>
 
     <!-- Secciones ocultas por ahora -->
-    <section id="libro2">
+    <section id="libro2" class="libro-section">
       <button class="oracion-btn" data-key="cruz">Señal de la cruz</button>
       <button class="oracion-btn" data-key="padrenuestro">Padre Nuestro</button>
       <button class="oracion-btn" data-key="avemaria">Ave María</button>
       <button class="oracion-btn" data-key="angel">Ángel de la guarda</button>
     </section>
 
-    <section id="libro3">
+    <section id="libro3" class="libro-section">
       <button class="oracion-btn" data-key="cruz">Señal de la cruz</button>
       <button class="oracion-btn" data-key="padrenuestro">Padre Nuestro</button>
       <button class="oracion-btn" data-key="avemaria">Ave María</button>
